--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,13 +6,22 @@
     "version": "0.2.0",
     "configurations": [
         {
-            "name": "Launch balances list",
+            "name": "Show balances",
             "type": "go",
             "request": "launch",
             "mode": "auto",
             "program": "cmd/gamma",
             "env": {},
             "args": ["balances", "list"],
+        },
+        {
+            "name": "Add transaction",
+            "type": "go",
+            "request": "launch",
+            "mode": "auto",
+            "program": "cmd/gamma",
+            "env": {},
+            "args": ["tx", "add", "--from", "admin", "--to", "user1", "--value", "1"],
         }
     ]
 }
