--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -22,6 +22,13 @@
             "program": "cmd/gamma",
             "env": {},
             "args": ["tx", "add", "--from", "admin", "--to", "user1", "--value", "1"],
+        },
+        {
+            "name": "Run Integration Tests",
+            "type": "go",
+            "request": "launch",
+            "mode": "auto",
+            "program": "tester",
         }
     ]
 }
